--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body{background: linear-gradient(90deg,  rgba(255,255,255,1) 0%,rgba(238,238,238
   margin-top: -38px;
   color:#828282
 }
-.card_img {width:100%; height: 250px; object-fit: cover; cursor: pointer;}
+.card_img {width:100%; height: 250px; object-fit: cover; }
 .card_img2 {width:100%; height: 220px; object-fit: cover; cursor: pointer;}
 .budge_menubar{z-index: 1; left:-5px; position:relative; top:-5px}
 
