--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body{background: linear-gradient(90deg,  rgba(255,255,255,1) 0%,rgba(238,238,238
 .card_img2 {width:100%; height: 220px; object-fit: cover; cursor: pointer;}
 .cart_icon{position: relative; right: 0px;}
 .budge_menubar{z-index: 1; position:relative; top:-5px;right:0px}
-
+.proDate{color:rgba(136, 136, 136, 0.5)!important}
 .star { 
   width:150px; 
   position: relative;
